--- a/demo-ten/blog-details-2.html
+++ b/demo-ten/blog-details-2.html
@@ -32,37 +32,37 @@
         <link rel="canonical" href="https://unistudio.co/html/news5/">
 
         <!-- preload head styles -->
-        <link rel="preload" href="../assets/css/unicons.min.css" as="style">
-        <link rel="preload" href="../assets/css/swiper-bundle.min.css" as="style">
+        <link rel="preload" href="assets/css/unicons.min.css" as="style">
+        <link rel="preload" href="assets/css/swiper-bundle.min.css" as="style">
 
         <!-- preload footer scripts -->
-        <link rel="preload" href="../assets/js/libs/jquery.min.js" as="script">
-        <link rel="preload" href="../assets/js/libs/scrollmagic.min.js" as="script">
-        <link rel="preload" href="../assets/js/libs/swiper-bundle.min.js" as="script">
-        <link rel="preload" href="../assets/js/libs/anime.min.js" as="script">
-        <link rel="preload" href="../assets/js/helpers/data-attr-helper.js" as="script">
-        <link rel="preload" href="../assets/js/helpers/swiper-helper.js" as="script">
-        <link rel="preload" href="../assets/js/helpers/anime-helper.js" as="script">
-        <link rel="preload" href="../assets/js/helpers/anime-helper-defined-timelines.js" as="script">
-        <link rel="preload" href="../assets/js/uikit-components-bs.js" as="script">
-        <link rel="preload" href="../assets/js/app.js" as="script">
+        <link rel="preload" href="assets/js/libs/jquery.min.js" as="script">
+        <link rel="preload" href="assets/js/libs/scrollmagic.min.js" as="script">
+        <link rel="preload" href="assets/js/libs/swiper-bundle.min.js" as="script">
+        <link rel="preload" href="assets/js/libs/anime.min.js" as="script">
+        <link rel="preload" href="assets/js/helpers/data-attr-helper.js" as="script">
+        <link rel="preload" href="assets/js/helpers/swiper-helper.js" as="script">
+        <link rel="preload" href="assets/js/helpers/anime-helper.js" as="script">
+        <link rel="preload" href="assets/js/helpers/anime-helper-defined-timelines.js" as="script">
+        <link rel="preload" href="assets/js/uikit-components-bs.js" as="script">
+        <link rel="preload" href="assets/js/app.js" as="script">
 
         <!-- app head for bootstrap core -->
-        <script src="../assets/js/app-head-bs.js"></script>
+        <script src="assets/js/app-head-bs.js"></script>
 
         <!-- include uni-core components -->
-        <link rel="stylesheet" href="../assets/js/uni-core/css/uni-core.min.css">
+        <link rel="stylesheet" href="assets/js/uni-core/css/uni-core.min.css">
 
         <!-- include styles -->
-        <link rel="stylesheet" href="../assets/css/unicons.min.css">
-        <link rel="stylesheet" href="../assets/css/prettify.min.css">
-        <link rel="stylesheet" href="../assets/css/swiper-bundle.min.css">
+        <link rel="stylesheet" href="assets/css/unicons.min.css">
+        <link rel="stylesheet" href="assets/css/prettify.min.css">
+        <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
         <!-- include main style -->
-        <link rel="stylesheet" href="../assets/css/theme/demo-ten.min.css">
+        <link rel="stylesheet" href="assets/css/theme/demo-ten.min.css">
 
         <!-- include scripts -->
-        <script src="../assets/js/uni-core/js/uni-core-bundle.min.js"></script>
+        <script src="assets/js/uni-core/js/uni-core-bundle.min.js"></script>
     </head>
     <body class="uni-body panel bg-white text-gray-900 dark:bg-black dark:text-gray-200 overflow-x-hidden">
 
@@ -1504,7 +1504,7 @@
                                     <figure class="float-end ms-3 mb-1">
                                         <figure class="featured-image m-0 ratio ratio-1x1 sm:w-300px rounded uc-transition-toggle overflow-hidden bg-gray-25 dark:bg-gray-800">
                                             <img class="media-cover image uc-transition-scale-up uc-transition-opaque" src="https://html.themewant.com/news5/assets/images/common/img-fallback.png" data-src="https://html.themewant.com/news5/assets/images/demo-ten/posts/post-1.jpg" alt="Holding flower, by Anthony Tran" data-uc-img="loading: lazy">
-                                            <a href="../assets/images/demo-ten/posts/post-1.jpg" class="position-cover" data-caption="Holding flower, by Anthony Tran"></a>
+                                            <a href="assets/images/demo-ten/posts/post-1.jpg" class="position-cover" data-caption="Holding flower, by Anthony Tran"></a>
                                         </figure>
                                         <figcaption class="fs-7 mt-1 text-center text-gray-400 dark:text-gray-200">Holding flower, by Anthony Tran</figcaption>
                                     </figure>
@@ -1518,7 +1518,7 @@
                                 <figure class="my-3 sm:my-4">
                                     <figure class="featured-image m-0 ratio ratio-3x2 rounded uc-transition-toggle overflow-hidden bg-gray-25 dark:bg-gray-800">
                                         <img class="media-cover image uc-transition-scale-up uc-transition-opaque" src="https://html.themewant.com/news5/assets/images/common/img-fallback.png" data-src="https://html.themewant.com/news5/assets/images/demo-ten/posts/post-2.jpg" alt="Pink Marketing, by Mak" data-uc-img="loading: lazy">
-                                        <a href="../assets/images/demo-ten/posts/post-2.jpg" class="position-cover" data-caption="Pink Marketing, by Mak"></a>
+                                        <a href="assets/images/demo-ten/posts/post-2.jpg" class="position-cover" data-caption="Pink Marketing, by Mak"></a>
                                     </figure>
                                     <figcaption class="fs-7 mt-1 text-center text-gray-400 dark:text-gray-200">Pink Marketing, by Mak</figcaption>
                                 </figure>
@@ -1534,7 +1534,7 @@
                                     <figure class="float-start me-3 mb-0">
                                         <figure class="featured-image m-0 ratio ratio-1x1 sm:w-300px rounded uc-transition-toggle overflow-hidden bg-gray-25 dark:bg-gray-800">
                                             <img class="media-cover image uc-transition-scale-up uc-transition-opaque" src="https://html.themewant.com/news5/assets/images/common/img-fallback.png" data-src="https://html.themewant.com/news5/assets/images/demo-ten/posts/post-3.jpg" alt="Great Schools and Entertainment" data-uc-img="loading: lazy">
-                                            <a href="../assets/images/demo-ten/posts/post-3.jpg" class="position-cover" data-caption="Great Schools and Entertainment"></a>
+                                            <a href="assets/images/demo-ten/posts/post-3.jpg" class="position-cover" data-caption="Great Schools and Entertainment"></a>
                                         </figure>
                                         <figcaption class="fs-7 mt-1 text-center text-gray-400 dark:text-gray-200">Great Schools and Entertainment</figcaption>
                                     </figure>
@@ -1959,21 +1959,21 @@
         <!-- Footer end -->
 
         <!-- include jquery & bootstrap js -->
-        <script defer src="../assets/js/libs/jquery.min.js"></script>
-        <script defer src="../assets/js/libs/bootstrap.min.js"></script>
+        <script defer src="assets/js/libs/jquery.min.js"></script>
+        <script defer src="assets/js/libs/bootstrap.min.js"></script>
 
         <!-- include scripts -->
-        <script defer src="../assets/js/libs/anime.min.js"></script>
-        <script defer src="../assets/js/libs/swiper-bundle.min.js"></script>
-        <script defer src="../assets/js/libs/scrollmagic.min.js"></script>
-        <script defer src="../assets/js/helpers/data-attr-helper.js"></script>
-        <script defer src="../assets/js/helpers/swiper-helper.js"></script>
-        <script defer src="../assets/js/helpers/anime-helper.js"></script>
-        <script defer src="../assets/js/helpers/anime-helper-defined-timelines.js"></script>
-        <script defer src="../assets/js/uikit-components-bs.js"></script>
+        <script defer src="assets/js/libs/anime.min.js"></script>
+        <script defer src="assets/js/libs/swiper-bundle.min.js"></script>
+        <script defer src="assets/js/libs/scrollmagic.min.js"></script>
+        <script defer src="assets/js/helpers/data-attr-helper.js"></script>
+        <script defer src="assets/js/helpers/swiper-helper.js"></script>
+        <script defer src="assets/js/helpers/anime-helper.js"></script>
+        <script defer src="assets/js/helpers/anime-helper-defined-timelines.js"></script>
+        <script defer src="assets/js/uikit-components-bs.js"></script>
 
         <!-- include app script -->
-        <script defer src="../assets/js/app.js"></script>
+        <script defer src="assets/js/app.js"></script>
 
         <script>
             // Schema toggle via URL
