--- a/demo-ten/shop-cart.html
+++ b/demo-ten/shop-cart.html
@@ -32,37 +32,37 @@
         <link rel="canonical" href="https://unistudio.co/html/news5/">
 
         <!-- preload head styles -->
-        <link rel="preload" href="../assets/css/unicons.min.css" as="style">
-        <link rel="preload" href="../assets/css/swiper-bundle.min.css" as="style">
+        <link rel="preload" href="assets/css/unicons.min.css" as="style">
+        <link rel="preload" href="assets/css/swiper-bundle.min.css" as="style">
 
         <!-- preload footer scripts -->
-        <link rel="preload" href="../assets/js/libs/jquery.min.js" as="script">
-        <link rel="preload" href="../assets/js/libs/scrollmagic.min.js" as="script">
-        <link rel="preload" href="../assets/js/libs/swiper-bundle.min.js" as="script">
-        <link rel="preload" href="../assets/js/libs/anime.min.js" as="script">
-        <link rel="preload" href="../assets/js/helpers/data-attr-helper.js" as="script">
-        <link rel="preload" href="../assets/js/helpers/swiper-helper.js" as="script">
-        <link rel="preload" href="../assets/js/helpers/anime-helper.js" as="script">
-        <link rel="preload" href="../assets/js/helpers/anime-helper-defined-timelines.js" as="script">
-        <link rel="preload" href="../assets/js/uikit-components-bs.js" as="script">
-        <link rel="preload" href="../assets/js/app.js" as="script">
+        <link rel="preload" href="assets/js/libs/jquery.min.js" as="script">
+        <link rel="preload" href="assets/js/libs/scrollmagic.min.js" as="script">
+        <link rel="preload" href="assets/js/libs/swiper-bundle.min.js" as="script">
+        <link rel="preload" href="assets/js/libs/anime.min.js" as="script">
+        <link rel="preload" href="assets/js/helpers/data-attr-helper.js" as="script">
+        <link rel="preload" href="assets/js/helpers/swiper-helper.js" as="script">
+        <link rel="preload" href="assets/js/helpers/anime-helper.js" as="script">
+        <link rel="preload" href="assets/js/helpers/anime-helper-defined-timelines.js" as="script">
+        <link rel="preload" href="assets/js/uikit-components-bs.js" as="script">
+        <link rel="preload" href="assets/js/app.js" as="script">
 
         <!-- app head for bootstrap core -->
-        <script src="../assets/js/app-head-bs.js"></script>
+        <script src="assets/js/app-head-bs.js"></script>
 
         <!-- include uni-core components -->
-        <link rel="stylesheet" href="../assets/js/uni-core/css/uni-core.min.css">
+        <link rel="stylesheet" href="assets/js/uni-core/css/uni-core.min.css">
 
         <!-- include styles -->
-        <link rel="stylesheet" href="../assets/css/unicons.min.css">
-        <link rel="stylesheet" href="../assets/css/prettify.min.css">
-        <link rel="stylesheet" href="../assets/css/swiper-bundle.min.css">
+        <link rel="stylesheet" href="assets/css/unicons.min.css">
+        <link rel="stylesheet" href="assets/css/prettify.min.css">
+        <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
         <!-- include main style -->
-        <link rel="stylesheet" href="../assets/css/theme/demo-ten.min.css">
+        <link rel="stylesheet" href="assets/css/theme/demo-ten.min.css">
 
         <!-- include scripts -->
-        <script src="../assets/js/uni-core/js/uni-core-bundle.min.js"></script>
+        <script src="assets/js/uni-core/js/uni-core-bundle.min.js"></script>
     </head>
     <body class="uni-body panel bg-white text-gray-900 dark:bg-black dark:text-gray-200 overflow-x-hidden">
 
@@ -1818,21 +1818,21 @@
         <!-- Footer end -->
 
         <!-- include jquery & bootstrap js -->
-        <script defer src="../assets/js/libs/jquery.min.js"></script>
-        <script defer src="../assets/js/libs/bootstrap.min.js"></script>
+        <script defer src="assets/js/libs/jquery.min.js"></script>
+        <script defer src="assets/js/libs/bootstrap.min.js"></script>
 
         <!-- include scripts -->
-        <script defer src="../assets/js/libs/anime.min.js"></script>
-        <script defer src="../assets/js/libs/swiper-bundle.min.js"></script>
-        <script defer src="../assets/js/libs/scrollmagic.min.js"></script>
-        <script defer src="../assets/js/helpers/data-attr-helper.js"></script>
-        <script defer src="../assets/js/helpers/swiper-helper.js"></script>
-        <script defer src="../assets/js/helpers/anime-helper.js"></script>
-        <script defer src="../assets/js/helpers/anime-helper-defined-timelines.js"></script>
-        <script defer src="../assets/js/uikit-components-bs.js"></script>
+        <script defer src="assets/js/libs/anime.min.js"></script>
+        <script defer src="assets/js/libs/swiper-bundle.min.js"></script>
+        <script defer src="assets/js/libs/scrollmagic.min.js"></script>
+        <script defer src="assets/js/helpers/data-attr-helper.js"></script>
+        <script defer src="assets/js/helpers/swiper-helper.js"></script>
+        <script defer src="assets/js/helpers/anime-helper.js"></script>
+        <script defer src="assets/js/helpers/anime-helper-defined-timelines.js"></script>
+        <script defer src="assets/js/uikit-components-bs.js"></script>
 
         <!-- include app script -->
-        <script defer src="../assets/js/app.js"></script>
+        <script defer src="assets/js/app.js"></script>
 
         <script>
             // Schema toggle via URL
