--- a/demo-ten/shop-product-detail.html
+++ b/demo-ten/shop-product-detail.html
@@ -32,37 +32,37 @@
         <link rel="canonical" href="https://unistudio.co/html/news5/">
 
         <!-- preload head styles -->
-        <link rel="preload" href="../assets/css/unicons.min.css" as="style">
-        <link rel="preload" href="../assets/css/swiper-bundle.min.css" as="style">
+        <link rel="preload" href="assets/css/unicons.min.css" as="style">
+        <link rel="preload" href="assets/css/swiper-bundle.min.css" as="style">
 
         <!-- preload footer scripts -->
-        <link rel="preload" href="../assets/js/libs/jquery.min.js" as="script">
-        <link rel="preload" href="../assets/js/libs/scrollmagic.min.js" as="script">
-        <link rel="preload" href="../assets/js/libs/swiper-bundle.min.js" as="script">
-        <link rel="preload" href="../assets/js/libs/anime.min.js" as="script">
-        <link rel="preload" href="../assets/js/helpers/data-attr-helper.js" as="script">
-        <link rel="preload" href="../assets/js/helpers/swiper-helper.js" as="script">
-        <link rel="preload" href="../assets/js/helpers/anime-helper.js" as="script">
-        <link rel="preload" href="../assets/js/helpers/anime-helper-defined-timelines.js" as="script">
-        <link rel="preload" href="../assets/js/uikit-components-bs.js" as="script">
-        <link rel="preload" href="../assets/js/app.js" as="script">
+        <link rel="preload" href="assets/js/libs/jquery.min.js" as="script">
+        <link rel="preload" href="assets/js/libs/scrollmagic.min.js" as="script">
+        <link rel="preload" href="assets/js/libs/swiper-bundle.min.js" as="script">
+        <link rel="preload" href="assets/js/libs/anime.min.js" as="script">
+        <link rel="preload" href="assets/js/helpers/data-attr-helper.js" as="script">
+        <link rel="preload" href="assets/js/helpers/swiper-helper.js" as="script">
+        <link rel="preload" href="assets/js/helpers/anime-helper.js" as="script">
+        <link rel="preload" href="assets/js/helpers/anime-helper-defined-timelines.js" as="script">
+        <link rel="preload" href="assets/js/uikit-components-bs.js" as="script">
+        <link rel="preload" href="assets/js/app.js" as="script">
 
         <!-- app head for bootstrap core -->
-        <script src="../assets/js/app-head-bs.js"></script>
+        <script src="assets/js/app-head-bs.js"></script>
 
         <!-- include uni-core components -->
-        <link rel="stylesheet" href="../assets/js/uni-core/css/uni-core.min.css">
+        <link rel="stylesheet" href="assets/js/uni-core/css/uni-core.min.css">
 
         <!-- include styles -->
-        <link rel="stylesheet" href="../assets/css/unicons.min.css">
-        <link rel="stylesheet" href="../assets/css/prettify.min.css">
-        <link rel="stylesheet" href="../assets/css/swiper-bundle.min.css">
+        <link rel="stylesheet" href="assets/css/unicons.min.css">
+        <link rel="stylesheet" href="assets/css/prettify.min.css">
+        <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
         <!-- include main style -->
-        <link rel="stylesheet" href="../assets/css/theme/demo-ten.min.css">
+        <link rel="stylesheet" href="assets/css/theme/demo-ten.min.css">
 
         <!-- include scripts -->
-        <script src="../assets/js/uni-core/js/uni-core-bundle.min.js"></script>
+        <script src="assets/js/uni-core/js/uni-core-bundle.min.js"></script>
     </head>
     <body class="uni-body panel bg-white text-gray-900 dark:bg-black dark:text-gray-200 overflow-x-hidden">
 
@@ -1477,7 +1477,7 @@
                                                         <div class="product type-product">
                                                             <figure class="featured-image m-0 ratio ratio-3x4 uc-transition-toggle overflow-hidden bg-gray-25 dark:bg-gray-800">
                                                                 <img class="media-cover image uc-transition-scale-up uc-transition-opaque" src="https://html.themewant.com/news5/assets/images/common/img-fallback.png" data-src="https://html.themewant.com/news5/assets/images/common/products/img-08.jpg" alt="Disney Toys" data-uc-img="loading: lazy">
-                                                                <a href="../assets/images/common/products/img-08.jpg" class="position-cover" data-caption="Disney Toys"></a>
+                                                                <a href="assets/images/common/products/img-08.jpg" class="position-cover" data-caption="Disney Toys"></a>
                                                             </figure>
                                                         </div>
                                                     </div>
@@ -1485,7 +1485,7 @@
                                                         <div class="product type-product">
                                                             <figure class="featured-image m-0 ratio ratio-3x4 uc-transition-toggle overflow-hidden bg-gray-25 dark:bg-gray-800">
                                                                 <img class="media-cover image uc-transition-scale-up uc-transition-opaque" src="https://html.themewant.com/news5/assets/images/common/img-fallback.png" data-src="https://html.themewant.com/news5/assets/images/common/products/img-17.jpg" alt="Disney Toys" data-uc-img="loading: lazy">
-                                                                <a href="../assets/images/common/products/img-17.jpg" class="position-cover" data-caption="Disney Toys"></a>
+                                                                <a href="assets/images/common/products/img-17.jpg" class="position-cover" data-caption="Disney Toys"></a>
                                                             </figure>
                                                         </div>
                                                     </div>
@@ -1493,7 +1493,7 @@
                                                         <div class="product type-product">
                                                             <figure class="featured-image m-0 ratio ratio-3x4 uc-transition-toggle overflow-hidden bg-gray-25 dark:bg-gray-800">
                                                                 <img class="media-cover image uc-transition-scale-up uc-transition-opaque" src="https://html.themewant.com/news5/assets/images/common/img-fallback.png" data-src="https://html.themewant.com/news5/assets/images/common/products/img-18.jpg" alt="Disney Toys" data-uc-img="loading: lazy">
-                                                                <a href="../assets/images/common/products/img-18.jpg" class="position-cover" data-caption="Disney Toys"></a>
+                                                                <a href="assets/images/common/products/img-18.jpg" class="position-cover" data-caption="Disney Toys"></a>
                                                             </figure>
                                                         </div>
                                                     </div>
@@ -1501,7 +1501,7 @@
                                                         <div class="product type-product">
                                                             <figure class="featured-image m-0 ratio ratio-3x4 uc-transition-toggle overflow-hidden bg-gray-25 dark:bg-gray-800">
                                                                 <img class="media-cover image uc-transition-scale-up uc-transition-opaque" src="https://html.themewant.com/news5/assets/images/common/img-fallback.png" data-src="https://html.themewant.com/news5/assets/images/common/products/img-19.jpg" alt="Disney Toys" data-uc-img="loading: lazy">
-                                                                <a href="../assets/images/common/products/img-19.jpg" class="position-cover" data-caption="Disney Toys"></a>
+                                                                <a href="assets/images/common/products/img-19.jpg" class="position-cover" data-caption="Disney Toys"></a>
                                                             </figure>
                                                         </div>
                                                     </div>
@@ -1509,7 +1509,7 @@
                                                         <div class="product type-product">
                                                             <figure class="featured-image m-0 ratio ratio-3x4 uc-transition-toggle overflow-hidden bg-gray-25 dark:bg-gray-800">
                                                                 <img class="media-cover image uc-transition-scale-up uc-transition-opaque" src="https://html.themewant.com/news5/assets/images/common/img-fallback.png" data-src="https://html.themewant.com/news5/assets/images/common/products/img-20.jpg" alt="Disney Toys" data-uc-img="loading: lazy">
-                                                                <a href="../assets/images/common/products/img-20.jpg" class="position-cover" data-caption="Disney Toys"></a>
+                                                                <a href="assets/images/common/products/img-20.jpg" class="position-cover" data-caption="Disney Toys"></a>
                                                             </figure>
                                                         </div>
                                                     </div>
@@ -1517,7 +1517,7 @@
                                                         <div class="product type-product">
                                                             <figure class="featured-image m-0 ratio ratio-3x4 uc-transition-toggle overflow-hidden bg-gray-25 dark:bg-gray-800">
                                                                 <img class="media-cover image uc-transition-scale-up uc-transition-opaque" src="https://html.themewant.com/news5/assets/images/common/img-fallback.png" data-src="https://html.themewant.com/news5/assets/images/common/products/img-21.jpg" alt="Disney Toys" data-uc-img="loading: lazy">
-                                                                <a href="../assets/images/common/products/img-21.jpg" class="position-cover" data-caption="Disney Toys"></a>
+                                                                <a href="assets/images/common/products/img-21.jpg" class="position-cover" data-caption="Disney Toys"></a>
                                                             </figure>
                                                         </div>
                                                     </div>
@@ -1525,7 +1525,7 @@
                                                         <div class="product type-product">
                                                             <figure class="featured-image m-0 ratio ratio-3x4 uc-transition-toggle overflow-hidden bg-gray-25 dark:bg-gray-800">
                                                                 <img class="media-cover image uc-transition-scale-up uc-transition-opaque" src="https://html.themewant.com/news5/assets/images/common/img-fallback.png" data-src="https://html.themewant.com/news5/assets/images/common/products/img-22.jpg" alt="Disney Toys" data-uc-img="loading: lazy">
-                                                                <a href="../assets/images/common/products/img-22.jpg" class="position-cover" data-caption="Disney Toys"></a>
+                                                                <a href="assets/images/common/products/img-22.jpg" class="position-cover" data-caption="Disney Toys"></a>
                                                             </figure>
                                                         </div>
                                                     </div>
@@ -2160,21 +2160,21 @@
         <!-- Footer end -->
 
         <!-- include jquery & bootstrap js -->
-        <script defer src="../assets/js/libs/jquery.min.js"></script>
-        <script defer src="../assets/js/libs/bootstrap.min.js"></script>
+        <script defer src="assets/js/libs/jquery.min.js"></script>
+        <script defer src="assets/js/libs/bootstrap.min.js"></script>
 
         <!-- include scripts -->
-        <script defer src="../assets/js/libs/anime.min.js"></script>
-        <script defer src="../assets/js/libs/swiper-bundle.min.js"></script>
-        <script defer src="../assets/js/libs/scrollmagic.min.js"></script>
-        <script defer src="../assets/js/helpers/data-attr-helper.js"></script>
-        <script defer src="../assets/js/helpers/swiper-helper.js"></script>
-        <script defer src="../assets/js/helpers/anime-helper.js"></script>
-        <script defer src="../assets/js/helpers/anime-helper-defined-timelines.js"></script>
-        <script defer src="../assets/js/uikit-components-bs.js"></script>
+        <script defer src="assets/js/libs/anime.min.js"></script>
+        <script defer src="assets/js/libs/swiper-bundle.min.js"></script>
+        <script defer src="assets/js/libs/scrollmagic.min.js"></script>
+        <script defer src="assets/js/helpers/data-attr-helper.js"></script>
+        <script defer src="assets/js/helpers/swiper-helper.js"></script>
+        <script defer src="assets/js/helpers/anime-helper.js"></script>
+        <script defer src="assets/js/helpers/anime-helper-defined-timelines.js"></script>
+        <script defer src="assets/js/uikit-components-bs.js"></script>
 
         <!-- include app script -->
-        <script defer src="../assets/js/app.js"></script>
+        <script defer src="assets/js/app.js"></script>
 
         <script>
             // Schema toggle via URL
